# village

./: README.md  config.toml  pyproject.toml
camp/: __main__.py
camp/cabin/: __init__.py
camp/config/: __init__.py  schema.py
camp/group/: __init__.py
client/: index.html
client/css/: main.css
