[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "village/__init__.py"

[project]
name = "village"
dynamic = ["version"]
description = "TBD"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/iiPythonx/village"
Issues = "https://github.com/iiPythonx/village/issues"

[project.scripts]
village = "village.__main__:main"
