[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "camp/__init__.py"

[project]
name = "camp"
dynamic = ["version"]
description = "TBD"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "pydantic-extra-types[pycountry]>=2.10.3",
    "uvicorn[standard]>=0.34.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/iiPythonx/camp"
Issues = "https://github.com/iiPythonx/camp/issues"

[project.scripts]
camp = "camp.__main__:camp"
